passed findAll_shouldNotReturnEmptyList()